--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE=mongodb+srv://aymanshalaby539:01019010755As@cluster0.z1qrzdx.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://aymanshalaby539:<password>@cluster0.z1qrzdx.mongodb.net/?retryWrites=true&w=majority
