--- a/config.env
+++ b/config.env
@@ -1,3 +1,2 @@
 PORT=3000
-DATABASE=mongodb+srv://aymanshalaby539:01019010755As@cluster0.z1qrzdx.mongodb.net/
-password = 123456ayman
+DATABASE=mongodb+srv://aymanshalaby539:<password>@cluster0.z1qrzdx.mongodb.net/?retryWrites=true&w=majority
