--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node ,Express , mongoDB",
   "main": "index.js",
   "scripts": {
-    "start": "ndoemon server.js"
+    "start": "ndoemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "ayman",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
