add user function , cookies and rate limiter

--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ Local_DataBase=mongodb://localhost:27017/Natours
 
 JWT_secret=aymanmohamedmokhtarshalabyelhabab
 JWT_Expire=90d
+JWT_Cookie_Expire = 90
 
 EMAIL_USER = aymanshalaby539@gmail.com
 EMAIL_PASSWORD = eatxgihkkbjajxob
