--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "object-shorthand": "off",
     "no-process-exit": "off",
     "no-param-reassign": "off",
-    "no-return-await": "off",
+    "no-return-await": "warn",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
